--- a/src/Homepage/Portafolio.module.css
+++ b/src/Homepage/Portafolio.module.css
@@ -11,11 +11,11 @@
 
 .darkTheme {
     color: white;
-    background-color: #454545;
+    background-color: #474d56;
     display: grid;
-    width: 95%;
+    width: 98%;
     height: auto;
-    margin: 30px;
+    margin: 5px;
     border: 5px solid black;
     border-radius: 15px;
     position: relative;
@@ -23,12 +23,6 @@
 
 .darkTheme .Profile span {
     color: white;
-}
-
-.Portafolio hr {
-    display: flex;
-    width: 75%;
-    border: 1px solid #213547;
 }
 
 .Profile {
@@ -91,10 +85,28 @@
     border: 1px solid black;
 }
 
-@media (max-width: 1000px) {
-    .Portafolio {
-        width: 95%;
-        margin: 7px 0 0 5px;
+@media (max-width: 1190px) {
+    .lightTheme {
+        width: 97%;
+        margin: 3px 0 0 10px;
+    }
+
+    .darkTheme {
+        width: 97%;
+        margin: 3px 0 0 10px;
+    }
+    
+}
+
+@media (max-width: 550px) {
+    .lightTheme {
+        width: 96%;
+        margin: 3px 0 0 3px;
+    }
+
+    .darkTheme {
+        width: 96%;
+        margin: 3px 0 0 3px;
     }
     
 }
