--- a/src/components/Interested/Interested.module.css
+++ b/src/components/Interested/Interested.module.css
@@ -32,11 +32,6 @@
     width: 175px;
     height: 175px;
     cursor: pointer;
-    filter: drop-shadow(0px 0px 0.2em white);
-}
-
-.CardSmallDark img:hover {
-    filter: drop-shadow(3px 4px 0.2em #3C486B);
 }
 
 .CardInfo {
@@ -57,6 +52,10 @@
 
 .CardInfo p {
     margin: 0 0 0 10px;
+}
+
+#AllImges:hover {
+    filter: drop-shadow(3px 4px 0.2em #e8e8e8);
 }
 
 #One:hover {
@@ -81,4 +80,48 @@
 
 #Six:hover {
     filter: drop-shadow(3px 4px 0.2em #E21818); 
+}
+
+@media (max-width: 1140px) {
+    .CardSmallDark {
+        margin: 0 10px;
+        gap: 20px;
+    }
+
+    .CardSmallLight {
+        margin: 0 10px;
+        gap: 20px;
+    }
+    
+}
+
+@media (max-width: 930px) {
+    .Interested {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 10px;
+    }
+    
+}
+
+@media (max-width: 550px) {
+    .CardSmallDark {
+        width: 165px;
+        height: 145px;
+    }
+
+    .CardSmallDark img {
+        width: 135px;
+        height: 135px;
+    }
+
+    .CardSmallLight img {
+        width: 135px;
+        height: 135px;
+    }
+    
+    .CardSmallLight {
+        width: 165px;
+        height: 145px;
+    }
 }
