--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -97,3 +97,23 @@
         width: 210px;
     }
 }
+
+@media (max-width: 980px) {
+    .Presentation {
+        margin: 25px 0 0 25px;
+    }
+}
+
+@media (max-width: 550px) {
+    .Presentation {
+        margin: 25px 0 10px 10px;
+        max-width: 420px;
+    }
+}
+
+@media (max-width: 442spx) {
+    .Presentation {
+        margin: 25px 0 0px 0px;
+        width: 280px;
+    }
+}
