--- a/src/components/ThemeButton/ThemeButton.module.css
+++ b/src/components/ThemeButton/ThemeButton.module.css
@@ -1,10 +1,23 @@
-.ButtonBox {
+.ButtonBoxLight {
     position: fixed;
     background-color: #526D82;
+    right: 35px;
+    top: 100px;
     width: 70px;
     height: 30px;
     border-radius: 15px;
     border: 2px solid black;
+}
+
+.ButtonBoxDark {
+    position: fixed;
+    background-color: #526D82;
+    right: 35px;
+    top: 100px;
+    width: 70px;
+    height: 30px;
+    border-radius: 15px;
+    border: 2px solid white;
 }
 
 .ButtonBallLight {
