--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+hr {
+    width: 75%;
+    border: 1px solid black;
+}
+
 ::-webkit-scrollbar{
     background-color: #7B8FA1;
     height: 15px;
