--- a/src/Homepage/Portafolio.module.css
+++ b/src/Homepage/Portafolio.module.css
@@ -72,8 +72,7 @@
     align-items: center;
     justify-items: center;
     width: 100%;
-    height: 400px;
-    border: 1px solid black;
+    height: 100%;
 }
 
 .Social {
