--- a/src/components/CardsRick/CardsRick.module.css
+++ b/src/components/CardsRick/CardsRick.module.css
@@ -22,6 +22,8 @@
 }
 
 .Character_info {
+    font-size: 30px;
+    color: #213547;
     background-color: rgba(225, 225, 225, 0.6);
     border: 6px solid rgba(12, 91, 129, 0.9);
     border-radius: 25px;
