--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -6,15 +6,41 @@
     gap: 10px;
     margin: 30px 0 30px;
     align-items: center;
-
 }
 
 .sectionOne {
+    display: grid;
+    grid-template-columns: 35% 65%;
     width: 97%;
     height: 440px;
     margin: 0 1% 0;
     border: 6px solid greenyellow;
     border-radius: 15px;
+}
+
+.sectionOne img {
+    width: 100px;
+    height: 100px;
+    margin: 20px 0 0 20px;
+    object-fit: scale-down;
+    border-radius: 10px;
+}
+
+.Images {
+    margin-top: 30px;
+    width: 100%;
+    height: 380px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    border-right: 2px solid black;
+}
+
+.Experience {
+    margin-top: 30px;
+    width: 100%;
+    height: 380px;
+    display: grid;
+    grid-template-columns: auto;
 }
 
 .sectionTwo {
