--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -28,7 +28,8 @@
 
 .cardLight:hover img {
     transition: 0.4s;
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1) rotate(-0.5deg);
+    transform: scale(1.1) rotate(-0.5deg);
 }
 
 .cardDark:hover img {
@@ -42,6 +43,16 @@
     align-items: center;
 }
 
+.cardLight:hover .cardInfo :nth-child(3) {
+    color: white;
+    background-color: #7B8FA1;
+}
+
+.cardDark:hover .cardInfo :nth-child(3) {
+    color: black;
+    background-color: #7B8FA1;
+}
+
 .cardInfo :nth-child(1) {
     margin: 17px 0 0 0;
 }
@@ -51,7 +62,14 @@
 }
 
 .cardInfo :nth-child(3) {
-    margin: 0;
+    width: 100px;
+    height: 20px;
+    margin: 5px 0 0 20px;
+    border: 3px solid #495579;
+    padding: 5px 0 3px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.55s;
 }
 
 @media (max-width: 1191px) {
