--- a/src/Homepage/Portafolio.module.css
+++ b/src/Homepage/Portafolio.module.css
@@ -1,5 +1,5 @@
 .lightTheme {
-    background-color: floralwhite;
+    background-color: white;
     display: grid;
     width: 95%;
     height: auto;
@@ -58,13 +58,12 @@
     height: 500px;
 }
 
-.WorkExp {
+.FeaturedProject {
     display: grid;
     align-items: center;
     justify-items: center;
     width: 100%;
     height: 400px;
-    border: 1px solid black;
 }
 
 .Education {
@@ -75,13 +74,12 @@
     height: 100%;
 }
 
-.Social {
+.ContactMe {
     display: grid;
     align-items: center;
     justify-items: center;
     width: 100%;
-    height: 500px;
-    border: 1px solid black;
+    height: 600px;
 }
 
 @media (max-width: 1190px) {
