--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
     display: grid;
-    background-color: floralwhite;
+    background-color: white;
     scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
 }
