--- a/src/components/ThemeButton/ThemeButton.module.css
+++ b/src/components/ThemeButton/ThemeButton.module.css
@@ -1,10 +1,10 @@
 .ButtonBoxLight {
     position: fixed;
     background-color: #526D82;
-    right: 35px;
+    right: 3%;
     top: 100px;
-    width: 70px;
-    height: 30px;
+    width: 65px;
+    height: 25px;
     border-radius: 15px;
     border: 2px solid black;
 }
@@ -12,10 +12,10 @@
 .ButtonBoxDark {
     position: fixed;
     background-color: #526D82;
-    right: 35px;
+    right: 3%;
     top: 100px;
-    width: 70px;
-    height: 30px;
+    width: 65px;
+    height: 25px;
     border-radius: 15px;
     border: 2px solid white;
 }
@@ -23,8 +23,8 @@
 .ButtonBallLight {
     position: relative;
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     background-color: #FFED00;
     left: 0px;
     transition: .4s;
@@ -33,8 +33,8 @@
 .ButtonBallDark {
     position: relative;
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     background-color: #27374D;
     left: 40.5px;
     transition: .4s;
