--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -1,8 +1,17 @@
-.ContactMe {
+.ContactMeLight {
     width: 100%;
     height: 100%;
     display: grid;
     place-items: center;
     background: linear-gradient(white, #474d56);
-    border-radius: 8px;
+    border-radius: 0 0 9px 9px;
+}
+
+.ContactMeDark {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    background: linear-gradient(#474d56, white);
+    border-radius: 0 0 9px 9px;
 }
