--- a/src/components/Interested/Interested.module.css
+++ b/src/components/Interested/Interested.module.css
@@ -32,6 +32,7 @@
     width: 175px;
     height: 175px;
     cursor: pointer;
+    filter: drop-shadow(3px 4px 0.2em #000000);
 }
 
 .CardInfo {
@@ -55,7 +56,7 @@
 }
 
 #AllImges:hover {
-    filter: drop-shadow(3px 4px 0.2em #e8e8e8);
+    filter: drop-shadow(3px 4px 0.2em #f7f3f3);
 }
 
 #One:hover {
